# pdcurses

./: CMakeLists.txt  README  curses.h  pdcurses-config.cmake.in  pdcurses.vcxproj  pdcurses.vcxproj.filters
pdcurses/: CMakeLists.txt
win32/: CMakeLists.txt  pdcscrn.c
